Commit completed Guava Examples

--- a/pom.xml
+++ b/pom.xml
@@ -3,4 +3,12 @@
   <groupId>nz.ac.massey.cs.251</groupId>
   <artifactId>Maven_Tutorial</artifactId>
   <version>1.0.0</version>
+
+  <dependencies>
+  <dependency>
+    <groupId>com.google.guava</groupId>
+    <artifactId>guava</artifactId>
+    <version>19.0</version>
+  </dependency>
+  </dependencies>
 </project>
